# mergescribe

./: .gitignore  LICENSE  README.md  audio_processing.py  config_manager.py  fast_text_input.py  main.py  mic_manager.py  pyproject.toml  requirements.txt  run_tests.py  settings_dialog.py  text_editing.py  transcriber.py  verify_installation.py
.github/workflows/: ci.yml
mergescribe/: __init__.py  __main__.py  audio.py  config.py  consensus.py  context.py  correct.py  input.py  metrics.py  output.py  router.py  session.py  training.py  types.py  validate.py
mergescribe/providers/: __init__.py  gemini.py  groq.py  parakeet.py
mergescribe/ui/: __init__.py  menu_bar.py  settings.py
providers/: __init__.py  gemini.py  groq_whisper.py  parakeet_mlx.py
tests/: benchmark_connection.py  test_audio_processing.py  test_config_manager.py  test_integration.py  test_mergescribe_audio.py  test_mergescribe_integration.py  test_mergescribe_providers.py  test_mergescribe_session.py  test_providers.py
transcriber/: __init__.py  audio.py  correction.py  history.py  processing.py  providers.py  state.py
